# authul

./: .editorconfig  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
authul_crypto/: Cargo.toml
authul_crypto/src/: error.rs  jwk.rs  jwk_set.rs  jwt.rs  lib.rs
authul_db/: Cargo.toml  build.rs
authul_db/migrations/: U20240510085602__create_clone_schema_function.sql  U20240510090419__create_oidc_clients_table.sql  U20240511150403__create_principals_table.sql  U20240517201212__create_signing_keys_table.sql  U20240520080839__create_oidc_tokens_table.sql  U20240528084606__create_oauth_provider_enum.sql  U20240528084607__create_oauth_callback_states_table.sql  U20240606101249__create_oauth_identities_table.sql
authul_db/src/: conn.rs  error.rs  lib.rs  migrations.rs  pool.rs  quote.rs  types.rs
authul_db/src/model/: mod.rs  oauth_callback_state.rs  oauth_identity.rs  oidc_client.rs  oidc_token.rs  principal.rs  signing_key.rs  user.rs
authul_frontend/: Cargo.toml  build.rs
authul_frontend/assets/: frontend.css
authul_frontend/src/: actix_app.rs  assets.rs  auth_context.rs  config.rs  error.rs  lib.rs  render_config.rs
authul_frontend/src/authenticate/: github_auth.rs  gitlab_auth.rs  google_auth.rs  mod.rs  oauth_callback.rs  password_auth.rs
authul_frontend/src/middleware/: cors.rs  csrf.rs  mod.rs
authul_frontend/src/oidc/: authorize.rs  mod.rs  provider_metadata.rs  token.rs
authul_frontend/src/periodic_tasks/: mod.rs  oauth_callback_states.rs  oidc_tokens.rs  signing_keys.rs
authul_macros/: Cargo.toml
authul_macros/src/: lib.rs
authul_macros/src/table/: args.rs  field.rs  mod.rs
authul_macros/tests/errors/table/: attr_name_no_equals.rs  attr_name_no_equals.stderr  attr_name_value_wrong_type.rs  attr_name_value_wrong_type.stderr  attr_name_wrong_type.rs  attr_name_wrong_type.stderr  invalid_attr_name.rs  invalid_attr_name.stderr  invalid_attr_punct.rs  invalid_attr_punct.stderr  no_struct.rs  no_struct.stderr  on_wrong_kind_of_object.rs  on_wrong_kind_of_object.stderr
authul_oauth2/: Cargo.toml
authul_oauth2/src/: error.rs  error_code.rs  lib.rs  oauth_client.rs
authul_oauth2/src/provider/: github.rs  gitlab.rs  google.rs  mod.rs
authul_util/: Cargo.toml
authul_util/src/: lib.rs
authul_xtask/: Cargo.toml
authul_xtask/src/: main.rs
src/: config.rs  lib.rs
src/cli/: mod.rs
src/cli/client/: mod.rs
src/frontend/: mod.rs
tests/: end-to-end.rs  endpoints.rs
tests/cassettes/: example_jwks.json  github_oauth.json
tests/e2e/: mod.rs  password_auth.rs
tests/endpoint/: mod.rs  oidc_authorize.rs  oidc_provider_metadata.rs  oidc_token.rs
tests/endpoint/authenticate/: mod.rs  oauth_callback.rs  password_auth.rs
tests/screenshots/: .gitignore
tests/util/: browser.rs  mod.rs
