[package]
name = "authul_frontend"
edition = "2021"

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
ssr = [
    "dep:authul_crypto",
    "dep:authul_db",
    "dep:authul_macros",
    "dep:authul_oauth2",
	"dep:authul_util",
    "dep:actix-web",
    "dep:actix-web-httpauth",
    "dep:actix-web-rust-embed-responder",
    "dep:base64",
    "dep:bcrypt",
    "dep:ciborium",
    "dep:email_address",
    "dep:file-mode",
    "dep:futures-util",
	"dep:hex",
	"dep:http-cache-reqwest",
    "dep:leptos_actix",
	"dep:md-5",
	"dep:parking_lot",
    "dep:paste",
    "dep:pin-project",
    "dep:rand",
    "dep:reqwest-middleware",
	"dep:reqwest-tracing",
    "dep:rust-embed-for-web",
    "dep:secrecy",
    "dep:serde_json",
    "dep:service-skeleton",
    "dep:sha2",
    "dep:strong-box",
    "dep:tap",
    "dep:time",
    "dep:tokio",
    "dep:tracing-actix-web",
    "dep:url",
    "dep:uuid",
    "dep:visibility",
    "dep:zxcvbn",
    "leptos/ssr",
	"leptos/tracing",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
authul_crypto = { workspace = true, optional = true }
authul_db = { workspace = true, optional = true }
authul_macros = { workspace = true, optional = true }
authul_oauth2 = { workspace = true, optional = true }
authul_util = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-web-httpauth = { workspace = true, optional = true }
actix-web-rust-embed-responder = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
cfg-if.workspace = true
ciborium = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
email_address = { workspace = true, optional = true }
file-mode = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
http-cache-reqwest = { workspace = true, default-features = false, features = ["manager-moka"], optional = true }
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
md-5 = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }
reqwest-tracing = { workspace = true, optional = true }
rust-embed-for-web = { workspace = true, optional = true }
secrecy = { workspace = true, features = ["serde"], optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
service-skeleton = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
strong-box = { workspace = true, optional = true }
tap = { workspace = true, optional = true }
thiserror.workspace = true
thiserror-ext.workspace = true
time = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
tracing-actix-web = { workspace = true, features = ["uuid_v7"], optional = true }
tracing.workspace = true
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v7"], optional = true }
visibility = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
zxcvbn = { workspace = true, optional = true }
